# ollama-search-agent

./: .env.example  .gitignore  AGENTS.md  README.md  TECHNICAL_OVERVIEW.md  activate_venv.bat  activate_venv.ps1  agent.py  config.py  deepsearch_summary.md  deepsearch_summary_en.md  main.py  pyproject.toml  requirements.txt  test_factory.py
langchain_tools/: __init__.py  search_tools.py
llm_clients/: __init__.py  ollama_client.py  openai_client.py
search_engines/: __init__.py  base_search.py  bing_search.py  brave_search.py  custom_google_search.py  factory.py  google_search.py  placeholder_search.py
