[project]
name = "ollama-search-agent"
version = "0.1.0"
description = "A modular Python-based search agent that leverages Large Language Models (LLMs) to provide intelligent search capabilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-openai>=0.3.35",
    "openai>=2.3.0",
]
keywords = ["llm", "search", "ollama", "openai", "ai-agent"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
